<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Multi App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_todolist">To Do List</string>
    <string name="title_reactiontest">Test your Reaction</string>
    <string name="title_comingsoon">Coming soon</string>
    <string name="btn_additem">Add</string>
    <string name="your_list">Your ToDo List</string>
    <string name="main_folder">Main Folder</string>
    <string name="add_folder">Add Folder</string>
    <string name="cancel">Cancel</string>

    <string name="tap_to_continue">Tap To Continue</string>
    <string name="wait">Wait...</string>
    <string name="to_fast">To Fast!</string>
    <string name="click">Click!</string>

    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="reaction_test_preferences">Reaction Test</string>
    <string name="vibration">Vibration</string>
    <string name="vibration_time">Vibration Time</string>
    <string name="delete_folders">Delete Folders</string>
    <string name="made_by">Made by Geras1m &#x1F609;</string>
</resources>
